feat: add new messages

--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -38,6 +38,7 @@
         "passwordLabel": "Password",
         "passwordPlaceholder": "Enter your password",
         "submitButton": "Login",
+        "remember": "Remember",
         "noAccountMessage": "Don't have an account?",
         "registerLink": "Register",
         "success": "Login successful!",
@@ -55,6 +56,7 @@
         "confirmPasswordLabel": "Confirm Password",
         "confirmPasswordPlaceholder": "Confirm your password",
         "submitButton": "Register",
+        "remember": "Remember",
         "alreadyRegisteredMessage": "Already registered?",
         "loginLink": "Login",
         "success": "Registration successful!",
