--- a/src/locales/messages/kk.json
+++ b/src/locales/messages/kk.json
@@ -38,6 +38,7 @@
         "passwordLabel": "Құпия сөз",
         "passwordPlaceholder": "Құпия сөзіңізді енгізіңіз",
         "submitButton": "Кіру",
+        "remember": "Есте сақтау",
         "noAccountMessage": "Аккаунтыңыз жоқ па?",
         "registerLink": "Тіркелу",
         "success": "Кіру сәтті өтті!",
@@ -55,6 +56,7 @@
         "confirmPasswordLabel": "Құпия сөзді растау",
         "confirmPasswordPlaceholder": "Құпия сөзіңізді растаңыз",
         "submitButton": "Тіркелу",
+        "remember": "Есте сақтау",
         "alreadyRegisteredMessage": "Тіркелгенсіз бе?",
         "loginLink": "Кіру",
         "success": "Тіркелу сәтті өтті!",
