--- a/src/locales/messages/ru.json
+++ b/src/locales/messages/ru.json
@@ -38,6 +38,7 @@
         "passwordLabel": "Пароль",
         "passwordPlaceholder": "Введите ваш пароль",
         "submitButton": "Войти",
+        "remember": "Запомнить",
         "noAccountMessage": "Нет аккаунта?",
         "registerLink": "Зарегистрироваться",
         "success": "Авторизация прошла успешно!",
@@ -55,6 +56,7 @@
         "confirmPasswordLabel": "Подтвердите пароль",
         "confirmPasswordPlaceholder": "Подтвердите ваш пароль",
         "submitButton": "Зарегистрироваться",
+        "remember": "Запомнить",
         "alreadyRegisteredMessage": "Уже зарегистрированы?",
         "loginLink": "Войти",
         "success": "Регистрация прошла успешно!",
