--- a/src/locales/messages/kk.json
+++ b/src/locales/messages/kk.json
@@ -4,6 +4,7 @@
       "_components": {
         "Header": {
           "title": "Next Intl Auth Үлгісі",
+          "toggleTheme": "Тақырыпты ауыстыру",
           "unknownUser": "Белгісіз қолданушы",
           "signOut": "Шығу",
           "user": "Қолданушы",
@@ -33,6 +34,7 @@
     "(authentication)": {
       "login": {
         "title": "Кіру",
+        "toggleTheme": "Тақырыпты ауыстыру",
         "emailLabel": "Электрондық пошта",
         "emailPlaceholder": "Электрондық поштаңызды енгізіңіз",
         "passwordLabel": "Құпия сөз",
@@ -47,6 +49,7 @@
       },
       "register": {
         "title": "Тіркелу",
+        "toggleTheme": "Тақырыпты ауыстыру",
         "usernameLabel": "Пайдаланушы аты",
         "usernamePlaceholder": "Пайдаланушы атыңызды енгізіңіз",
         "emailLabel": "Электрондық пошта",
