refactor: update messages

--- a/src/locales/messages/ru.json
+++ b/src/locales/messages/ru.json
@@ -74,7 +74,7 @@
   },
   "shared": {
     "components": {
-      "LanguageSelector": {
+      "LanguageSelect": {
         "label": "Язык",
         "en": "Английский",
         "ru": "Русский",
