--- a/src/locales/messages/en.json
+++ b/src/locales/messages/en.json
@@ -74,7 +74,7 @@
   },
   "shared": {
     "components": {
-      "LanguageSelector": {
+      "LanguageSelect": {
         "label": "Language",
         "en": "English",
         "ru": "Russian",
